# tiro-website

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  404.html  CMakeLists.txt  LICENSE  README.md  about.html  docs.html  index.html  next.config.js  package-lock.json  package.json  sandbox.html  tsconfig.json
.devcontainer/: recommended-Dockerfile  recommended-devcontainer.json
.github/workflows/: deploy.yml
_next/static/1G1xITuhi9qlr0E_A5cJ-/: _buildManifest.js
_next/static/2lRByMbetiaIyJiGzvWkR/: _buildManifest.js
_next/static/5xSLf5SYWkxierxNfEu8l/: _buildManifest.js
_next/static/7kgPzjEJNBuZJvPrPptPy/: _buildManifest.js
_next/static/9FJiTVtZN_OdAuvPaclBy/: _buildManifest.js
_next/static/9xhjpoHdUn_vgG7OU6crk/: _buildManifest.js
_next/static/GOxJ6LbKVMgqV3Ti4leZH/: _buildManifest.js
_next/static/HmHpaBJwuiwp1AXhUCGC1/: _buildManifest.js
_next/static/Ks7Jmnh_YzQlcdWYHUIMz/: _buildManifest.js
_next/static/MQV31tKewcPszdz8UXdxa/: _buildManifest.js
_next/static/O_eMzRBTnkz0mwCp6MuI4/: _ssgManifest.js
_next/static/S-ockgvUVCUoV5StMk78q/: _buildManifest.js
_next/static/SNUlr4Pr6_nOLLDx73pUa/: _buildManifest.js
docker-build/: compile.sh
docker-build/src/: Dockerfile  build.sh
docs/: reference.html  stdlib.html
docs/api/: index_classes.html  index_examples.html  index_files.html  index_groups.html  index_namespaces.html  index_pages.html
docs/apidocs/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md
docs/articles/: reference.mdx  stdlib.mdx
docs/libtiro/: embedders-guide.html  getting-started.html
lib/: tiro.d.ts  tiro.js  tiro.wasm
src/: CMakeLists.txt  config.ts  main.cpp  runtime.cpp  runtime.hpp  tiro.d.ts  wasm_bindings.cpp
src/components/: Article.module.scss  AutoLink.tsx  Container.module.scss  ExternalLink.tsx  Layout.module.scss  Layout.tsx  SEO.tsx  useAsync.ts  useForceRerender.ts  useUpdateEffect.ts
src/docs/: apidocs.ts  articles.ts  mdx-support.tsx  search-index.preval.ts
src/hooks/: useDebounce.ts  useOnce.ts
src/pages/: about.tsx  index.tsx  sandbox.tsx
src/routes/: index.ts
src/runtime/: impl.ts  interfaces.ts
src/types/: thirdparty.d.ts
src/utils/: index.ts
types/: tiro.d.ts
(+1673 files in other folders)
